vest-dsl/test/bad/choice_arrays_invalid_len.vest
array = [u8; 4]
fmt(@tag: array, @len: u8) = choose(@tag) {
  [0; 4] => u8,
  [1; 4] => u32,
  [2; @len] => u32,
}
